# fuel_stations_web_service

./: .gitignore  README.md  api-description.md  representations.md  requests.md
service/: CMakeLists.txt  config.js  fuel_stations.cpp  fuel_stations.hpp  main.cpp
service/Debug/: service
tank/: load.yaml  token.txt
